CHANGELOG
=========
v5.29.01
-------
Replaced $gibbon->session to $session as "$gibbon->session" is now deprecated

v5.29.00
-------
Refactoring of all URLs involving parameters

v5.28.01
-------
Fixed Unread Comments bug impacting non-English commenters

v5.28.00
-------
Updated Disable Parent Evidence setting to give per-role granularity

v5.27.00
-------
Added Default Feedback setting

v5.26.00
-------
Added Linear chart option to Unit History by Student and My Unit History
Fixed bug in 12 month view of Learning Activity report 

v5.25.08
-------
Improved ordering of student enrolment records within a unit

v5.25.07
-------
Fixed PHP mangling in Unit Mentor files

v5.25.06
-------
Improved performance of scripts with the Big Data setting turned on

v5.25.05
-------
Switched teacher Comment field in approval view from plain to rich text
Removed non-reportable teachers and assistants from submission notifications

v5.25.04
-------
Fixed bug causing left students to show in unit approval view

v5.25.03
-------
Fixed massively pink bug introducted in v2.25.01

v5.25.02
-------
Set collapsed smart blocks to fade closed for more reliable H5P loading

v5.25.01
-------
Added new pink label colour for student units with status Exempt

v5.25.00
-------
Added (v28 dependent) ability for teachers to edit their own comments within 48 hours

v5.24.00
-------
Added new report showing notifications for unread comments

v5.23.01
-------
Switched to simplied Outcomes tab in unit details view for Big Data Schools
Added setting for Introductory text in Outcomes tab in unit details view
Fixed CSS issue introduced in last release

v5.23.00
-------
Transferred ownership from Ross Parker to Gibbon Foundation

v5.22.13
--------
Wrapped interface string "Outline" for translation

v5.22.12
--------
Fixed the no-prerequisite fix from last version

v5.22.11
--------
Fixed no-prerequisite edit issue
Fixed no-map issue on fresh installs

v5.22.10
--------