@@ -21,8 +21,6 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 use Gibbon\Module\FreeLearning\Domain\MentorGroupGateway;
 
-$_POST['address'] = '/modules/Free Learning/mentorGroups_manage.php';
-
 require_once '../../gibbon.php';
 
 $URL = $session->get('absoluteURL').'/index.php?q=/modules/Free Learning/mentorGroups_manage.php';
