@@ -61,7 +61,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Free Learning/units_browse
         $URL .= '&return=error6';
         header("Location: {$URL}");
     } else {
-        $roleCategory = getRoleCategory($session->get('gibbonRoleIDCurrent'), $connection2);
+        $roleCategory = $session->get('gibbonRoleIDCurrentCategory');
         if ($highestAction == false || empty($roleCategory)) {
             // Fail 0
             $URL .= '&return=error0';
