@@ -35,7 +35,7 @@ if (!isActionAccessible($guid, $connection2, '/modules/Free Learning/units_brows
     if ($highestAction == false) {
         $page->addError(__('The highest grouped action cannot be determined.'));
     } else {
-        $roleCategory = getRoleCategory($session->get('gibbonRoleIDCurrent'), $connection2);
+        $roleCategory = $session->get('gibbonRoleIDCurrentCategory');
 
         //Get params
         $freeLearningUnitID = $_GET['freeLearningUnitID'] ?? '';
