@@ -56,7 +56,7 @@ if (!isActionAccessible($guid, $connection2, '/modules/Free Learning/units_brows
         $URL .= '&updateReturn=error0';
         header("Location: {$URL}");
     } else {
-        $roleCategory = getRoleCategory($session->get('gibbonRoleIDCurrent'), $connection2);
+        $roleCategory = $session->get('gibbonRoleIDCurrentCategory');
 
         
         if ($urlParams["freeLearningUnitID"] == '') {
